// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgILt dmDRZx"
    role="button"
  >
    <button
      class="sc-gsTCUz sc-dlfnbm idRKex oSzyM sc-gKsewC ijcSYt"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      Save
      <div
        class="sc-fubCfw dUqkTa"
      />
      <div
        class="sc-iBPRYJ idfKxT"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-crrsfI iItuYr"
  >
    <div
      class="sc-iqHYGH icbpBe"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pFZIQ flczYu"
      >
        <hr
          class="sc-kEjbxe gJAmGL"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-kEjbxe gJAmGL"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgILt dmDRZx"
    role="button"
  >
    <button
      class="sc-gsTCUz sc-dlfnbm idRKex cuSjWD sc-gKsewC ijcSYt"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
    >
      Save
      <div
        class="sc-fubCfw dUqkTa"
      />
      <div
        class="sc-iBPRYJ idfKxT"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-crrsfI eAnzhb"
  >
    <div
      class="sc-dQppl bHQPKQ sc-bqyKva iUBVx fade-transition-enter fade-transition-enter-active"
    />
    <div
      class="sc-iqHYGH icbpBe"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pFZIQ flczYu"
      >
        <hr
          class="sc-kEjbxe gJAmGL"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-kEjbxe gJAmGL"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgILt dmDRZx"
    role="button"
  >
    <button
      class="sc-gsTCUz sc-dlfnbm idRKex ffFyTf sc-eCssSg eZdWdg"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      Save
    </button>
    <button
      class="sc-gsTCUz sc-dlfnbm idRKex ffFyTf sc-jSgupP fKddXt"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      <div
        class="sc-iBPRYJ idfKxT"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-crrsfI iItuYr"
  >
    <div
      class="sc-iqHYGH icbpBe"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pFZIQ flczYu"
      >
        <hr
          class="sc-kEjbxe gJAmGL"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-kEjbxe gJAmGL"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKgILt dmDRZx"
    role="button"
  >
    <button
      class="sc-gsTCUz sc-dlfnbm idRKex eCLzwk sc-eCssSg eZdWdg"
      font-size="14px"
      font-weight="bold"
    >
      Save
    </button>
    <button
      class="sc-gsTCUz sc-dlfnbm idRKex eCLzwk sc-jSgupP fKddXt"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
    >
      <div
        class="sc-iBPRYJ idfKxT"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-crrsfI eAnzhb"
  >
    <div
      class="sc-dQppl bHQPKQ sc-bqyKva iUBVx fade-transition-enter fade-transition-enter-active"
    />
    <div
      class="sc-iqHYGH icbpBe"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pFZIQ flczYu"
      >
        <hr
          class="sc-kEjbxe gJAmGL"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-kEjbxe gJAmGL"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-jrAGrp hsKOsc"
        >
          <p
            class="sc-bdfBwQ gNlqto"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
